--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 <div>
     <div class="heading">
         <img src="Sizzla Logo.png" alt="Sizzla Logo" width="150px" style="float: left;">
-        <center><h1 style="font-size: 50px;"> </h1></center>
+        <center><h1 style="font-size: 50px;">Sizzla</h1></center>
     </div>
 </div>
 <br><br>
