Fix stylesheet link in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Home</title>
-    <link rel="Style.css" href="stylesheet">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <div>
