Enhance HTML structure and navigation
Added viewport meta tag, updated logo size, and improved navigation structure.

--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html lang="en">
 <head>
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
+    <link rel="icon" href="SizzlaLogo.png">
 </head>
 <body>
 <div>
     <div class="heading">
-        <img src="SizzlaLogo.png" alt="Sizzla Logo" width="150px" style="float: left;">
-        <center><h1 style="font-size: 50px;">Sizzla</h1></center>
+        <center><h1>Sizzla</h1></center>
     </div>
 </div>
 <br><br>
-<div>
-    <div class="navigation"> <center><a href="Home.html">Home</a></center></div>
-    <div class="navigation"> <center><a href="Amenities.html">Amenities</a></center></div>
-    <div class="navigation"> <center><a href="RoomRate.html">Room Rate</a></center></div>
-    <div class="navigation"> <center><a href="Reservation.html">Reservation</a></center></div>
+<div class="container">
+    <div><img src="SizzlaLogo.png" alt="Sizzla Logo" class="Logo" width="90px" style="float: left;"></div>
+    <div class="active"> <center><a href="index.html">Home</a></center></div>
+    <div class="navigation"> <center><a href="Menu.html">Menu</a></center></div>
     <div class="navigation"> <center><a href="AboutUs.html">About Us</a></center></div>
+</div>
+
+<div class="mainContainer">
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3859.926883727807!2d120.9842!3d14.5995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sph!4v0" frameborder="1"
+        loading="lazy"
+        width="750px" height="500px">
+    </iframe>
+    </div>
 </div>
 </body>
 </html>
